Added one Inut and Result Page. Still need to finish Triangle Calculator.

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -6,6 +6,7 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
+        <welcome-file>OnePageInputOutputResults.jsp</welcome-file>
         <welcome-file>Input.html</welcome-file>
     </welcome-file-list>
 </web-app>
